--- a/Lab/JPEG/ps-tema-01.ipynb
+++ b/Lab/JPEG/ps-tema-01.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 537,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,8 @@
     "from scipy.fft import dctn, idctn\n",
     "import shutil\n",
     "import os\n",
-    "import heapq"
+    "import heapq\n",
+    "import cv2"
    ]
   },
   {
@@ -35,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 538,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 539,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 540,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 541,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 542,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 543,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 544,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 545,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 546,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 547,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -600,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 548,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -680,14 +681,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 549,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('a', 1), ('w', 1), ('L', 1), (\"'\", 1), ('u', 1), ('o', 2), ('i', 2), ('d', 2), ('h', 3), ('n', 3), ('s', 4), ('c', 4), ('t', 4), ('e', 7), (' ', 7)]\n"
+      "[('w', 1), ('u', 1), ('L', 1), ('a', 1), (\"'\", 1), ('d', 2), ('i', 2), ('o', 2), ('h', 3), ('n', 3), ('s', 4), ('t', 4), ('c', 4), ('e', 7), (' ', 7)]\n"
      ]
     }
    ],
@@ -704,14 +705,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 550,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{' ': '000', 'e': '001', 's': '010', 't': '011', 'c': '1000', 'd': '1001', 'h': '1010', 'n': '1011', 'o': '1100', \"'\": '11010', 'L': '11011', 'a': '11100', 'i': '11101', 'u': '11110', 'w': '11111'}\n"
+      "{' ': '000', 'c': '001', 'e': '010', 's': '011', 'd': '1000', 'h': '1001', 'n': '1010', 'o': '1011', 't': '1100', \"'\": '11010', 'L': '11011', 'a': '11100', 'i': '11101', 'u': '11110', 'w': '11111'}\n"
      ]
     }
    ],
@@ -753,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 551,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -831,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 552,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -873,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 553,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -973,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 554,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -990,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 555,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1025,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 556,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1173,7 +1174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 557,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1195,7 +1196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 558,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1258,7 +1259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 559,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1283,7 +1284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 560,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1348,7 +1349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 561,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1370,6 +1371,94 @@
     "plt.title('Difference Image')\n",
     "plt.axis('off')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Video properties: 1280x720 @ 24.56464567488805 FPS, 27 frames\n",
+      "Original size: 2764800 bytes\n",
+      "Compressed size: 77594 bytes\n",
+      "Compression ratio: 35.63:1\n",
+      "Original size: 2764800 bytes\n",
+      "Compressed size: 307071 bytes\n",
+      "Compression ratio: 9.00:1\n",
+      "Original size: 2764800 bytes\n",
+      "Compressed size: 334757 bytes\n",
+      "Compression ratio: 8.26:1\n",
+      "Processing frame 3/27...\r"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[34]\u001b[39m\u001b[32m, line 47\u001b[39m\n\u001b[32m     45\u001b[39m test_video_path = \u001b[33m\"\u001b[39m\u001b[33mtest_video.mp4\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m     46\u001b[39m compressed_video_path = \u001b[33m\"\u001b[39m\u001b[33mcompressed_video.mp4\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m---> \u001b[39m\u001b[32m47\u001b[39m \u001b[43mcompress_video\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtest_video_path\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcompressed_video_path\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mQ_jpeg\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[34]\u001b[39m\u001b[32m, line 26\u001b[39m, in \u001b[36mcompress_video\u001b[39m\u001b[34m(input_video_path, output_video_path, Q, target_mse)\u001b[39m\n\u001b[32m     23\u001b[39m frame_rgb = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n\u001b[32m     25\u001b[39m temp_filename = \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mtemp_frame_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mframe_count\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m.mjpeg\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m---> \u001b[39m\u001b[32m26\u001b[39m \u001b[43msave_color_jpeg\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtemp_filename\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mframe_rgb\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mQ\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     28\u001b[39m frame_decompressed = load_color_jpeg(temp_filename)\n\u001b[32m     29\u001b[39m frame_bgr = cv2.cvtColor(frame_decompressed, cv2.COLOR_RGB2BGR)\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[23]\u001b[39m\u001b[32m, line 14\u001b[39m, in \u001b[36msave_color_jpeg\u001b[39m\u001b[34m(filename, image_rgb, Q)\u001b[39m\n\u001b[32m     12\u001b[39m channels_data = []\n\u001b[32m     13\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m channel \u001b[38;5;129;01min\u001b[39;00m [Y, Cb, Cr]:\n\u001b[32m---> \u001b[39m\u001b[32m14\u001b[39m     rle_data, amplitudes = \u001b[43mquantify_image\u001b[49m\u001b[43m(\u001b[49m\u001b[43mchannel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mQ\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     15\u001b[39m     canonical_codes = build_huffman_table(rle_data)\n\u001b[32m     16\u001b[39m     data_bytes, pad_len = encode_data(rle_data, amplitudes, canonical_codes)\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[14]\u001b[39m\u001b[32m, line 58\u001b[39m, in \u001b[36mquantify_image\u001b[39m\u001b[34m(image, Q)\u001b[39m\n\u001b[32m     55\u001b[39m q_block = np.round(dct_block / Q)\n\u001b[32m     57\u001b[39m zigzag_coeffs = zigzag_order(q_block)\n\u001b[32m---> \u001b[39m\u001b[32m58\u001b[39m rle_block, amplitude_block = \u001b[43mrun_length_encode\u001b[49m\u001b[43m(\u001b[49m\u001b[43mzigzag_coeffs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     60\u001b[39m rle_data.extend(rle_block)\n\u001b[32m     61\u001b[39m amplitudes.extend(amplitude_block)\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[14]\u001b[39m\u001b[32m, line 36\u001b[39m, in \u001b[36mrun_length_encode\u001b[39m\u001b[34m(coeffs)\u001b[39m\n\u001b[32m     34\u001b[39m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m     35\u001b[39m         rle.append((zero_count << \u001b[32m4\u001b[39m) | category(coeff))\n\u001b[32m---> \u001b[39m\u001b[32m36\u001b[39m         amplitudes.append(\u001b[43mamplitude_bits\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mcoeff\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[32m     37\u001b[39m         zero_count = \u001b[32m0\u001b[39m\n\u001b[32m     39\u001b[39m \u001b[38;5;66;03m# EOB: End of block if trailing zeros exist\u001b[39;00m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[14]\u001b[39m\u001b[32m, line 12\u001b[39m, in \u001b[36mamplitude_bits\u001b[39m\u001b[34m(value)\u001b[39m\n\u001b[32m      9\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m value == \u001b[32m0\u001b[39m:\n\u001b[32m     10\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[33m'\u001b[39m\u001b[33m'\u001b[39m\n\u001b[32m---> \u001b[39m\u001b[32m12\u001b[39m k = \u001b[43mcategory\u001b[49m\u001b[43m(\u001b[49m\u001b[43mvalue\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     14\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m value > \u001b[32m0\u001b[39m:\n\u001b[32m     15\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mformat\u001b[39m(value, \u001b[33m'\u001b[39m\u001b[33mb\u001b[39m\u001b[33m'\u001b[39m).zfill(k)\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[14]\u001b[39m\u001b[32m, line 5\u001b[39m, in \u001b[36mcategory\u001b[39m\u001b[34m(value)\u001b[39m\n\u001b[32m      3\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[32m0\u001b[39m\n\u001b[32m      4\u001b[39m abs_value = \u001b[38;5;28mabs\u001b[39m(value)\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mint\u001b[39m(\u001b[43mnp\u001b[49m\u001b[43m.\u001b[49m\u001b[43mfloor\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnp\u001b[49m\u001b[43m.\u001b[49m\u001b[43mlog2\u001b[49m\u001b[43m(\u001b[49m\u001b[43mabs_value\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m) + \u001b[32m1\u001b[39m\n",
+      "\u001b[31mKeyboardInterrupt\u001b[39m: "
+     ]
+    }
+   ],
+   "source": [
+    "def compress_video(input_video_path, output_video_path, Q, target_mse=None):\n",
+    "    cap = cv2.VideoCapture(input_video_path)\n",
+    "\n",
+    "    fps = cap.get(cv2.CAP_PROP_FPS)\n",
+    "    frame_width = int(cap.get(cv2.CAP_PROP_FRAME_WIDTH))\n",
+    "    frame_height = int(cap.get(cv2.CAP_PROP_FRAME_HEIGHT))\n",
+    "    total_frames = int(cap.get(cv2.CAP_PROP_FRAME_COUNT))\n",
+    "\n",
+    "    print(f\"Video properties: {frame_width}x{frame_height} @ {fps} FPS, {total_frames} frames\")\n",
+    "\n",
+    "    fourcc = cv2.VideoWriter_fourcc(*'mp4v')\n",
+    "    out = cv2.VideoWriter(output_video_path, fourcc, fps, (frame_width, frame_height))\n",
+    "\n",
+    "    frame_count = 0\n",
+    "\n",
+    "    for frame_count in range(total_frames):\n",
+    "        ret, frame = cap.read()\n",
+    "        if not ret:\n",
+    "            break\n",
+    "\n",
+    "        print(f\"Processing frame {frame_count}/{total_frames}...\", end='\\r')\n",
+    "\n",
+    "        frame_rgb = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n",
+    "\n",
+    "        temp_filename = f\"temp_frame_{frame_count}.mjpeg\"\n",
+    "        save_color_jpeg(temp_filename, frame_rgb, Q)\n",
+    "\n",
+    "        frame_decompressed = load_color_jpeg(temp_filename)\n",
+    "        frame_bgr = cv2.cvtColor(frame_decompressed, cv2.COLOR_RGB2BGR)\n",
+    "\n",
+    "        out.write(frame_bgr)\n",
+    "        os.remove(temp_filename)\n",
+    "\n",
+    "    cap.release()\n",
+    "    out.release()\n",
+    "\n",
+    "    total_original_size = os.path.getsize(input_video_path)\n",
+    "    total_compressed_size = os.path.getsize(output_video_path)\n",
+    "    print(f\"Compressed size: {total_compressed_size} bytes\")\n",
+    "    print(f\"Compression ratio: {total_original_size / total_compressed_size:.2f}:1\")\n",
+    "\n",
+    "\n",
+    "test_video_path = \"test_video.mp4\"\n",
+    "compressed_video_path = \"compressed_video.mp4\"\n",
+    "compress_video(test_video_path, compressed_video_path, Q_jpeg)"
    ]
   }
  ],
