--- a/Lab/JPEG/ps-tema-01.ipynb
+++ b/Lab/JPEG/ps-tema-01.ipynb
@@ -1375,7 +1375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1392,24 +1392,80 @@
       "Original size: 2764800 bytes\n",
       "Compressed size: 334757 bytes\n",
       "Compression ratio: 8.26:1\n",
-      "Processing frame 3/27...\r"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[34]\u001b[39m\u001b[32m, line 47\u001b[39m\n\u001b[32m     45\u001b[39m test_video_path = \u001b[33m\"\u001b[39m\u001b[33mtest_video.mp4\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m     46\u001b[39m compressed_video_path = \u001b[33m\"\u001b[39m\u001b[33mcompressed_video.mp4\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m---> \u001b[39m\u001b[32m47\u001b[39m \u001b[43mcompress_video\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtest_video_path\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcompressed_video_path\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mQ_jpeg\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[34]\u001b[39m\u001b[32m, line 26\u001b[39m, in \u001b[36mcompress_video\u001b[39m\u001b[34m(input_video_path, output_video_path, Q, target_mse)\u001b[39m\n\u001b[32m     23\u001b[39m frame_rgb = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n\u001b[32m     25\u001b[39m temp_filename = \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mtemp_frame_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mframe_count\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m.mjpeg\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m---> \u001b[39m\u001b[32m26\u001b[39m \u001b[43msave_color_jpeg\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtemp_filename\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mframe_rgb\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mQ\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     28\u001b[39m frame_decompressed = load_color_jpeg(temp_filename)\n\u001b[32m     29\u001b[39m frame_bgr = cv2.cvtColor(frame_decompressed, cv2.COLOR_RGB2BGR)\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[23]\u001b[39m\u001b[32m, line 14\u001b[39m, in \u001b[36msave_color_jpeg\u001b[39m\u001b[34m(filename, image_rgb, Q)\u001b[39m\n\u001b[32m     12\u001b[39m channels_data = []\n\u001b[32m     13\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m channel \u001b[38;5;129;01min\u001b[39;00m [Y, Cb, Cr]:\n\u001b[32m---> \u001b[39m\u001b[32m14\u001b[39m     rle_data, amplitudes = \u001b[43mquantify_image\u001b[49m\u001b[43m(\u001b[49m\u001b[43mchannel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mQ\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     15\u001b[39m     canonical_codes = build_huffman_table(rle_data)\n\u001b[32m     16\u001b[39m     data_bytes, pad_len = encode_data(rle_data, amplitudes, canonical_codes)\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[14]\u001b[39m\u001b[32m, line 58\u001b[39m, in \u001b[36mquantify_image\u001b[39m\u001b[34m(image, Q)\u001b[39m\n\u001b[32m     55\u001b[39m q_block = np.round(dct_block / Q)\n\u001b[32m     57\u001b[39m zigzag_coeffs = zigzag_order(q_block)\n\u001b[32m---> \u001b[39m\u001b[32m58\u001b[39m rle_block, amplitude_block = \u001b[43mrun_length_encode\u001b[49m\u001b[43m(\u001b[49m\u001b[43mzigzag_coeffs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     60\u001b[39m rle_data.extend(rle_block)\n\u001b[32m     61\u001b[39m amplitudes.extend(amplitude_block)\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[14]\u001b[39m\u001b[32m, line 36\u001b[39m, in \u001b[36mrun_length_encode\u001b[39m\u001b[34m(coeffs)\u001b[39m\n\u001b[32m     34\u001b[39m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m     35\u001b[39m         rle.append((zero_count << \u001b[32m4\u001b[39m) | category(coeff))\n\u001b[32m---> \u001b[39m\u001b[32m36\u001b[39m         amplitudes.append(\u001b[43mamplitude_bits\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mcoeff\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[32m     37\u001b[39m         zero_count = \u001b[32m0\u001b[39m\n\u001b[32m     39\u001b[39m \u001b[38;5;66;03m# EOB: End of block if trailing zeros exist\u001b[39;00m\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[14]\u001b[39m\u001b[32m, line 12\u001b[39m, in \u001b[36mamplitude_bits\u001b[39m\u001b[34m(value)\u001b[39m\n\u001b[32m      9\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m value == \u001b[32m0\u001b[39m:\n\u001b[32m     10\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[33m'\u001b[39m\u001b[33m'\u001b[39m\n\u001b[32m---> \u001b[39m\u001b[32m12\u001b[39m k = \u001b[43mcategory\u001b[49m\u001b[43m(\u001b[49m\u001b[43mvalue\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     14\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m value > \u001b[32m0\u001b[39m:\n\u001b[32m     15\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mformat\u001b[39m(value, \u001b[33m'\u001b[39m\u001b[33mb\u001b[39m\u001b[33m'\u001b[39m).zfill(k)\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[14]\u001b[39m\u001b[32m, line 5\u001b[39m, in \u001b[36mcategory\u001b[39m\u001b[34m(value)\u001b[39m\n\u001b[32m      3\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[32m0\u001b[39m\n\u001b[32m      4\u001b[39m abs_value = \u001b[38;5;28mabs\u001b[39m(value)\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mint\u001b[39m(\u001b[43mnp\u001b[49m\u001b[43m.\u001b[49m\u001b[43mfloor\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnp\u001b[49m\u001b[43m.\u001b[49m\u001b[43mlog2\u001b[49m\u001b[43m(\u001b[49m\u001b[43mabs_value\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m) + \u001b[32m1\u001b[39m\n",
-      "\u001b[31mKeyboardInterrupt\u001b[39m: "
+      "Original size: 2764800 bytes\n",
+      "Compressed size: 329334 bytes\n",
+      "Compression ratio: 8.40:1\n",
+      "Original size: 2764800 bytes\n",
+      "Compressed size: 321452 bytes\n",
+      "Compression ratio: 8.60:1\n",
+      "Original size: 2764800 bytes\n",
+      "Compressed size: 335628 bytes\n",
+      "Compression ratio: 8.24:1\n",
+      "Original size: 2764800 bytes\n",
+      "Compressed size: 335765 bytes\n",
+      "Compression ratio: 8.23:1\n",
+      "Original size: 2764800 bytes\n",
+      "Compressed size: 317358 bytes\n",
+      "Compression ratio: 8.71:1\n",
+      "Original size: 2764800 bytes\n",
+      "Compressed size: 337633 bytes\n",
+      "Compression ratio: 8.19:1\n",
+      "Original size: 2764800 bytes\n",
+      "Compressed size: 320244 bytes\n",
+      "Compression ratio: 8.63:1\n",
+      "Original size: 2764800 bytes\n",
+      "Compressed size: 332106 bytes\n",
+      "Compression ratio: 8.33:1\n",
+      "Original size: 2764800 bytes\n",
+      "Compressed size: 320697 bytes\n",
+      "Compression ratio: 8.62:1\n",
+      "Original size: 2764800 bytes\n",
+      "Compressed size: 335449 bytes\n",
+      "Compression ratio: 8.24:1\n",
+      "Original size: 2764800 bytes\n",
+      "Compressed size: 341833 bytes\n",
+      "Compression ratio: 8.09:1\n",
+      "Original size: 2764800 bytes\n",
+      "Compressed size: 327795 bytes\n",
+      "Compression ratio: 8.43:1\n",
+      "Original size: 2764800 bytes\n",
+      "Compressed size: 336718 bytes\n",
+      "Compression ratio: 8.21:1\n",
+      "Original size: 2764800 bytes\n",
+      "Compressed size: 321117 bytes\n",
+      "Compression ratio: 8.61:1\n",
+      "Original size: 2764800 bytes\n",
+      "Compressed size: 322780 bytes\n",
+      "Compression ratio: 8.57:1\n",
+      "Original size: 2764800 bytes\n",
+      "Compressed size: 329431 bytes\n",
+      "Compression ratio: 8.39:1\n",
+      "Original size: 2764800 bytes\n",
+      "Compressed size: 322909 bytes\n",
+      "Compression ratio: 8.56:1\n",
+      "Original size: 2764800 bytes\n",
+      "Compressed size: 325172 bytes\n",
+      "Compression ratio: 8.50:1\n",
+      "Original size: 2764800 bytes\n",
+      "Compressed size: 322537 bytes\n",
+      "Compression ratio: 8.57:1\n",
+      "Original size: 2764800 bytes\n",
+      "Compressed size: 322478 bytes\n",
+      "Compression ratio: 8.57:1\n",
+      "Original size: 2764800 bytes\n",
+      "Compressed size: 247484 bytes\n",
+      "Compression ratio: 11.17:1\n",
+      "Original size: 2764800 bytes\n",
+      "Compressed size: 233530 bytes\n",
+      "Compression ratio: 11.84:1\n",
+      "Original size: 2764800 bytes\n",
+      "Compressed size: 245224 bytes\n",
+      "Compression ratio: 11.27:1\n",
+      "Original size: 2764800 bytes\n",
+      "Compressed size: 233346 bytes\n",
+      "Compression ratio: 11.85:1\n",
+      "Compressed size: 422554 bytes\n",
+      "Compression ratio: 0.48:1\n"
      ]
     }
    ],
@@ -1459,6 +1515,17 @@
     "test_video_path = \"test_video.mp4\"\n",
     "compressed_video_path = \"compressed_video.mp4\"\n",
     "compress_video(test_video_path, compressed_video_path, Q_jpeg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Mici concluzii\n",
+    "\n",
+    "- Am observat ca suma dimensiunilor fisierelor comprimate ale cadrelor individuale este mai mare decat dimensiunea fisierului video mp4, ceea ce sugereaza ca mp4 foloseste tehnici suplimentare de compresie care nu sunt prezente in implementarea mea simpla de JPEG pe cadre individuale.\n",
+    "- Nu sunt foarte familiar cu felul in care mp4 comprima video-urile, dar presupun ca se leaga de similaritatile intre cadre consecutive pentru a reduce redundanta.\n",
+    "- Deci, o sa presupun ca algoritmul meu de compresie strica intr-un fel sau altul cum stie mp4 sa faca compresie video mai eficient, de aceea fisierul are dimensiune mai mare (in cazul meu, 2x pe un clip de 1 secunda, 1280x720@24.5 fps, audio trimmed)"
    ]
   }
  ],
